Class-07(11-09-2022)/Assignment/style3.css
.col-1{
    width: 8.33%;

}

.col-2{
    width: 16.66%;
}

.col-3{
    width: 25%;
}

.col-4{
    width: 33.33%;
}

.col-5{
    width: 41.66%;
}

.col-6{
    width: 50%;
}

.col-7{
    width: 58.33%;
}

.col-8{
    width: 66.66%;
}

.col-9{
    width: 75%;
}

.col-10{
    width: 83.33%;
}

.col-11{
    width: 91.66%;
}

.col-12{
    width: 100%;

}

[class*='col-']{
float: left;
border: 1px solid black;
box-sizing: border-box;
}

.logo-height{
    height: 200px;
    background-color: pink;
}

.banner-height{
    height: 200px;
    background-color: mediumseagreen;
}

.menu-height{
    height: 50px;
    background-color: #121010;
}

.logo{
    height: 100%;
    width: 100%;
}

.banner{
    height: 100%;
    width: 100%;
}


/* Commentss starts here
*{
    margin: 0;
    padding: 0;
}
Comments ends here */


ul{
    list-style: none;
    margin-top: 15px;
}

.main-menu li{
    float: left;
    padding-left: 50px;
    padding-right: 50px;
}

ul .child-menu{
    padding-left: 160px;
}


 ul .child-menu a{
    text-decoration: none;
    color: white;
    font-weight: bolder;
    font-family: Verdana, Geneva, Tahoma, sans-serif;

}

/*
.exception{
    color: black;
    background-color: skyblue;
    padding: 10px;
    border-radius: 10px;
}
*/

.menu-height ul li a:hover{
    color: red;
    background-color: rgb(248, 242, 245);
    padding: 10px;
    border-radius: 10px;
}

